<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px_comm</name>
  <version>0.1.0</version>
  <description>The px_comm package</description>
  <maintainer email="michael.heine@fau.de">Michael Heine</maintainer>
  <maintainer email="hengli@inf.ethz.ch">Lionel Heng</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/px_comm</url>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <export>                               
    <build_type>ament_cmake</build_type> 
  </export> 
</package>
