<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mavlink_serial_client</name>
  <version>0.2.0</version>
  <description>The mavlink_serial_client package</description>
  <maintainer email="michael.heine1@gmx.net">Michael Heine</maintainer>
  <author email="hengli@inf.ethz.ch">Lionel Heng</author>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/mavlink_serial_client</url>
  <url type="website">https://github.com/masskro0/px4flow_node_ros2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>image_transport</depend>
  <depend>px_comm</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
